--- a/day3/auction-site/app/views/users/index.html.erb
+++ b/day3/auction-site/app/views/users/index.html.erb
@@ -4,10 +4,10 @@
 	<% @my_users.each do |user| %>
 		<li>
 			<%= user.name %>
-			<%= link_to 'Show user info', users_show_path(user) %>
-			<%= link_to 'Delete', users_destroy_path(user), method: :post %>
+			<%= link_to 'Show', user_path(user) %>
+			<%= link_to 'Delete', user_path(user), method: :delete %>
 		</li>
 	<% end %>
 </ul>
 
-<%= link_to "New user", users_new_path %>
+<%= link_to "New user", new_user_path %>
