--- a/day3/auction-site/app/views/users/new.html.erb
+++ b/day3/auction-site/app/views/users/new.html.erb
@@ -1,4 +1,6 @@
-<h1>Add new User</h1>
+<div class="page-header">
+	<h1>Add new User</h1>
+</div>
 
 <% if @my_user.errors.any? %>
 	<ul>
@@ -9,12 +11,19 @@
 	
 <% end %>
 
-<%= form_for(@my_user) do |f| %>
-		<%= f.label :name %>
-		<%= f.text_field :name %>
-
-		<%= f.label :email %>
-		<%= f.text_field :email %>
-
-		<%= f.button %>
+<div class="row">
+	<div class="col-md-9">
+		<%= form_for(@my_user, html: {class: "form-inline"}) do |f| %>
+		<div class="form-group">
+			<%= f.label :name %>
+			<%= f.text_field :name, {class: "form-control"} %>	
+		</div>
+		<div class="form-group">
+			<%= f.label :email %>
+			<%= f.text_field :email, {class: "form-control"} %>	
+		</div>
+		<%= f.button "Create", {class: "btn btn-success"} %>
 <% end %>
+	</div>
+
+</div>
